# LGTVDeviceListener

./: .gitignore  CMakeLists.txt  DeviceListener.cpp  DeviceListener.h  LGTVClient.cpp  LGTVClient.h  LGTVDeviceListener.cpp  LICENSE.txt  Log.cpp  Log.h  README.md  StringUtil.cpp  StringUtil.h  WebSocketClient.cpp  WebSocketClient.h  vcpkg.json
.github/workflows/: continuous-integration.yml
src/: DeviceListener.cpp  DeviceListener.h  LGTVClient.h  LGTVDeviceListener.cpp  Log.cpp  Log.h  README.md  WebSocketClient.cpp  WebSocketClient.h  vcpkg.json
